added description column to book table

--- a/src/components/BookTable.css
+++ b/src/components/BookTable.css
@@ -286,3 +286,21 @@ button:active {
     width: auto;
   }
 }
+
+
+
+
+
+.description {
+  max-width: 100%;
+  font-size: 14px;
+  color: #334155;
+  line-height: 1.5;
+
+  display: -webkit-box;
+  -webkit-line-clamp: 3;    
+  -webkit-box-orient: vertical;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
