--- a/src/components/BookTable.css
+++ b/src/components/BookTable.css
@@ -42,7 +42,7 @@ thead th {
   text-transform: uppercase;
   color: #334155;
   text-align: center;
-  border-bottom: 2px solid #e5e7eb;
+  border-bottom: 2px solid #00000068;
   position: sticky;
   top: 0;
   z-index: 2;
@@ -165,13 +165,13 @@ button:active {
 
 
 .actionbtn button:nth-child(1) {
-  background-color: #2563eb;
+  background-color: #603378;
   color: #ffffff;
-  box-shadow: 0 4px 10px rgba(37, 99, 235, 0.35);
+  box-shadow: 0 4px 10px rgba(187, 48, 48, 0.35);
 }
 
 .actionbtn button:nth-child(1):hover {
-  background-color: #1d4ed8;
+  background-color: #c15483;
   transform: translateY(-1px);
 }
 
@@ -298,7 +298,7 @@ button:active {
   line-height: 1.5;
 
   display: -webkit-box;
-  -webkit-line-clamp: 3;    
+ -webkit-line-clamp: 3;    
   -webkit-box-orient: vertical;
 
   overflow: hidden;
