--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,8 +3,8 @@
   position: sticky;
   top: 0;
   z-index: 100;
-  height: 64px;
-  background-color: #2a0f18;
+  height: 70px;
+  background-color: #865db7;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,7 +18,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 28px;
+  font-size: 30px;
   font-weight: 600;
   letter-spacing: 0.4px;
   color: #e5e7eb;
@@ -43,7 +43,7 @@
 
 .addbtn:hover {
   background-color: #f1f5f9;
-  transform: translateY(-1px);
+  transform: translateY(-2px);
 }
 
 .addbtn:active {
