--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,7 +4,7 @@
   top: 0;
   z-index: 100;
   height: 70px;
-  background-color: #865db7;
+   background: linear-gradient(135deg, #8f296b, #440a0a);
   display: flex;
   align-items: center;
   justify-content: center;
