--- a/src/components/BookTable.css
+++ b/src/components/BookTable.css
@@ -298,6 +298,7 @@ button:active {
   line-height: 1.5;
 
   display: -webkit-box;
+  line-clamp: 3;  
  -webkit-line-clamp: 3;    
   -webkit-box-orient: vertical;
 
